@@ -1,6 +1,7 @@
 package com.PlateShare_BackEnd.PlateShare.service.impl;
 
-import com.PlateShare_BackEnd.PlateShare.dto.SurplusDTO;
+import com.PlateShare_BackEnd.PlateShare.dto.RequestSurplus;
+import com.PlateShare_BackEnd.PlateShare.dto.ResponseSurplusDTO;
 import com.PlateShare_BackEnd.PlateShare.mapper.SurplusMapper;
 import com.PlateShare_BackEnd.PlateShare.model.Utilisateur;
 import com.PlateShare_BackEnd.PlateShare.model.Surplus;
@@ -12,10 +13,10 @@ import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
-public class SurplusServiceImpl implements SurplusService {
+public class
+SurplusServiceImpl implements SurplusService {
 
     private final SurplusRepository surplusRepository;
     private final UtilisateurRepository utilisateurRepository;
@@ -29,23 +30,25 @@ public class SurplusServiceImpl implements SurplusService {
     }
 
     @Override
-    public SurplusDTO createSurplus(SurplusDTO surplusDTO) {
+    public ResponseSurplusDTO createSurplus(RequestSurplus surplusDTO) {
         String userEmail = SecurityContextHolder.getContext().getAuthentication().getName();
         Utilisateur donateur = utilisateurRepository.findByEmail(userEmail)
                 .orElseThrow(() -> new RuntimeException("Donor not found with email: " + userEmail));
 
-        Surplus surplus = new Surplus();
-        surplus.setNom(surplusDTO.nom());
-        surplus.setType(surplusDTO.type());
-        surplus.setQuantite(surplusDTO.quantite());
-        surplus.setDateExpiration(surplusDTO.dateExpiration());
+        Surplus surplus = surplusMapper.toEntity(surplusDTO); // new Surplus();
+//        surplus.setNom(surplusDTO.nom());
+//        surplus.setType(surplusDTO.type());
+//        surplus.setQuantite(surplusDTO.quantite());
+//        surplus.setDateExpiration(surplusDTO.dateExpiration());
         surplus.setDonateur(donateur);
         Surplus savedSurplus = surplusRepository.save(surplus);
-        return surplusMapper.toDto(savedSurplus);
+    //  RequestSurplus requestSurplus=  surplusMapper.toDtoS(savedSurplus);
+
+      return surplusMapper.toDto(savedSurplus);
     }
 
     @Override
-    public SurplusDTO updateSurplus(Long id, SurplusDTO surplusDTO) {
+    public ResponseSurplusDTO updateSurplus(Long id, ResponseSurplusDTO surplusDTO) {
         Surplus existingSurplus = surplusRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("suurplus not found with id: " + id));
 
@@ -61,18 +64,18 @@ public class SurplusServiceImpl implements SurplusService {
 
 
     @Override
-    public SurplusDTO getSurplusById(Long id) {
+    public ResponseSurplusDTO getSurplusById(Long id) {
         Surplus surplus = surplusRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("Surplus not found with id: " + id));
         return surplusMapper.toDto(surplus);
     }
 
     @Override
-    public List<SurplusDTO> getAllSurplus() {
+    public List<ResponseSurplusDTO> getAllSurplus() {
         return surplusRepository.findAll()
                 .stream()
-                .map(surplusMapper::toDto)
-                .collect(Collectors.toList());
+               .map(surplusMapper::toDto)
+                .toList();
     }
 
     @Override
